fix: admin and client spacings

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,7 +72,7 @@
   }
 
   .content-wrapper {
-    @apply w-full min-h-[calc(100vh-4rem)] lg:min-h-[calc(100vh-4rem)] pt-4 pb-10 lg:pb-24 px-4 lg:px-16;
+    @apply w-full min-h-[calc(100vh-4rem)] lg:min-h-[calc(100vh-4rem)] pb-10 lg:pb-24 px-4 lg:px-16;
   }
 
   .small-icons {
@@ -80,7 +80,7 @@
   }
 
   .dashboard-container {
-    @apply w-full min-h-screen px-1.5 lg:p-6 bg-gray-50;
+    @apply w-full min-h-screen px-1.5 lg:px-4 bg-gray-50;
   }
 
   .admin-title {
